--- a/public/admin.html
+++ b/public/admin.html
@@ -4,78 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz Buzzer - Admin</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        padding: 20px;
-      }
-      input,
-      button {
-        font-size: 1rem;
-        padding: 3px;
-      }
-      button {
-        padding: 3px 10px;
-      }
-
-      #loginForm {
-        width: 300px;
-        text-align: center;
-      }
-      #adminPanel {
-        width: 500px;
-        text-align: center;
-      }
-      #adminPanel {
-        display: none;
-      }
-      #usersList,
-      #resetSection {
-        margin-top: 20px;
-        width: 100%;
-      }
-      .userItem {
-        display: flex;
-        justify-content: space-between;
-        margin-bottom: 10px;
-      }
-      .userItem > span {
-        padding: 3px 10px 3px 0;
-      }
-      .pendingNameChange {
-        color: orange;
-      }
-      .tabs {
-        display: flex;
-        justify-content: space-around;
-        margin-bottom: 20px;
-      }
-      .tab {
-        cursor: pointer;
-        padding: 10px 20px;
-        border: 1px solid #ccc;
-        border-bottom: none;
-        background-color: #f9f9f9;
-        width: 100%;
-      }
-      .active-tab {
-        background-color: #fff;
-        font-weight: bold;
-      }
-      .tab-content {
-        display: none;
-      }
-      .active-content {
-        display: block;
-      }
-      .teamDescription {
-        margin-left: 10px;
-        color: #999;
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <div id="loginForm">
