--- a/public/user.html
+++ b/public/user.html
@@ -7,102 +7,13 @@
       content="width=device-width, initial-scale=1.0, user-scalable=no"
     />
     <title>Quiz Buzzer</title>
-    <style>
-      body {
-        font-family: Arial, sans-serif;
-        font-size: 16px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        height: 100vh;
-        margin: 0;
-        background-color: #f0f0f0;
-        touch-action: none;
-        user-select: none;
-      }
-      input,
-      button {
-        font-size: 1rem;
-        padding: 3px;
-      }
-      button {
-        padding: 3px 10px;
-      }
-      #registrationForm,
-      #buzzerContainer {
-        display: none;
-        text-align: center;
-        margin-bottom: 50px;
-      }
-      #teamNameContainer {
-        margin-bottom: 20px;
-        font-size: 24px;
-      }
-      #teamDescriptionContainer {
-        margin-bottom: 20px;
-        font-size: 16px;
-        color: #999;
-        display: none;
-      }
-      #changeRegistration {
-        cursor: pointer;
-        position: absolute;
-        top: 10px;
-        right: 10px;
-      }
-      #teamNameInput {
-        font-size: 16px;
-        padding: 3px;
-      }
-      #registerButton {
-        font-size: 16px;
-        padding: 3px 10px;
-      }
-      #buzzerButton {
-        width: 80vw;
-        height: 80vw;
-        max-width: 300px;
-        max-height: 300px;
-        background-color: #ff4136;
-        border: none;
-        border-radius: 20px;
-        font-size: 24px;
-        color: white;
-        cursor: pointer;
-        transition: transform 0.1s;
-        touch-action: manipulation;
-        touch-action: none;
-        user-select: none;
-      }
-      #buzzerButton:active:not(:disabled) {
-        transform: scale(0.95);
-      }
-      #buzzerButton:disabled {
-        pointer-events: none;
-        background-color: #cccccc;
-        cursor: not-allowed;
-        transition: none;
-      }
-      @media (orientation: landscape) {
-        body {
-          flex-direction: row;
-        }
-        #teamNameContainer {
-          padding-right: 20px;
-        }
-        #buzzerButton {
-          width: 40vw;
-          height: 40vw;
-        }
-      }
-    </style>
+    <link rel="stylesheet" href="/css/main.css" />
   </head>
   <body>
     <div id="registrationForm">
       <h2>Register Your Team</h2>
-      <input type="text" id="teamNameInput" placeholder="Enter team name" />
-      <button id="registerButton">Register</button>
+      <input type="text" id="team-name-input" placeholder="Enter team name" />
+      <button id="register-button">Register</button>
     </div>
     <div id="buzzerContainer">
       <div id="teamNameContainer">
