--- a/public/main.html
+++ b/public/main.html
@@ -6,9 +6,8 @@
     <title>Quiz Buzzer - Main Screen</title>
     <link rel="stylesheet" href="/css/main.css" />
   </head>
-  <body>
+  <body class="page-main">
     <div id="result">Waiting for buzzer press...</div>
-    <div id="history-icon">📜</div>
     <div id="pressesList"></div>
 
     <script src="/socket.io/socket.io.js"></script>
@@ -20,7 +19,6 @@
       const socket = io();
       const resultElement = document.getElementById("result");
       const pressesListElement = document.getElementById("pressesList");
-      const historyIconElement = document.getElementById("history-icon");
       let buzzerSound = new Audio("buzzer.mp3");
       let subsequentBuzzerSound = new Audio("buzzer-2.mp3");
       let speechSynthesis = window.speechSynthesis;
@@ -81,24 +79,6 @@
       socket.on("reset", () => {
         resultElement.textContent = "Waiting for buzzer press...";
         pressesListElement.innerHTML = "";
-      });
-
-      window.addEventListener("load", () => {
-        fetch("/history")
-          .then((response) => response.json())
-          .then((presses) => {
-            if (presses.length === 0) {
-              return;
-            }
-
-            resultElement.textContent = presses[0].teamName;
-            updatePresses(presses);
-          });
-      });
-
-      historyIconElement.addEventListener("click", () => {
-        pressesListElement.style.display =
-          pressesListElement.style.display === "none" ? "block" : "none";
       });
 
       function speak(text) {
